--- a/lista2/Makefile
+++ b/lista2/Makefile
@@ -6,4 +6,6 @@ install:
 	$(JULIA) -e 'using Pkg; Pkg.add("JSON")'
 	$(JULIA) -e 'using Pkg; Pkg.add("JuMP")'
 	$(JULIA) -e 'using Pkg; Pkg.add("GLPK")'
+	$(JULIA) -e 'using Pkg; Pkg.add("Cbc")'
+	$(JULIA) -e 'using Pkg; Pkg.add("HiGHS")'
 	$(JULIA) -e 'using Pkg; Pkg.add("Plots")'
